# slyh

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  flatter.yml  release.yml
assets/: slyh.desktop
locales/: app.toml
src/: main.rs
src/app/: config.rs
src/app/gui/: logic.rs  mod.rs  ui.rs
